Hide the text note under Get More Questions on small screens. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -149,8 +149,8 @@
                 <div class="section">
                     <p class="get-more">
                         <a class="get-choices">Get More Questions</a>
-                        Add a few more questions for narrowing your
-                        matching species.</p>
+                        <span>Add a few more questions for narrowing your
+                            matching species.</span></p>
                 </div>
 
 
