Make the photos menu and the questions heading less prominent. (#308)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -886,6 +886,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #page-head h1 { display: none; }
   body.skey.results #sidebar { margin-top: 55px; }
   body.skey.results #sidebar { font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 10px; width: 130px; }
+  body.skey.results #sidebar .section.instructions { padding: 12px; }
   body.skey.results #sidebar .section.instructions h5 { font-size: 12px; }
   body.skey.results #sidebar .section p.get-more span { display: none; margin: 0; }
   body.skey.results #sidebar .scroll { width: 130px; }
@@ -894,7 +895,8 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .plant-list .plant { position: static; }
   body.skey.results h3.species-count-heading { font-size: 18px; white-space: nowrap; }
   body.skey.results h3.species-count-heading > span { left: auto; top: 55px; }
-  body.skey.results #results-display { margin-top: 83px; } }
+  body.skey.results #results-display { margin-top: 83px; }
+  body.skey.results #results-display label, body.skey.results #results-display select { font-size: 13px; } }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { body.skey.results #sidebar ul.option-list li:hover { background: #fff; /* No hover color */ }
   body.skey.results #sidebar ul.option-list li.active:hover { background: #dce890; /* Except active-filter hover color */ } }
