Arrange buttons and reduce filter area height on small screens. (#308)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -885,10 +885,12 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #page-head { left: 8px; position: absolute; }
   body.skey.results #page-head h1 { display: none; }
   body.skey.results #sidebar { margin-top: 55px; }
-  body.skey.results #sidebar { font-size: 10px; width: 130px; }
+  body.skey.results #sidebar { font-size: 10px; min-height: auto; width: 130px; }
+  body.skey.results #sidebar .section { padding: 0 0 0 4px; }
   body.skey.results #sidebar .section.instructions { padding: 12px; }
   body.skey.results #sidebar .section.instructions h5 { font-size: 12px; }
   body.skey.results #sidebar .section p.get-more span { display: none; margin: 0; }
+  body.skey.results #sidebar .section a.clear-all-btn, body.skey.results #sidebar .section a.get-help-btn { margin: 0; }
   body.skey.results #sidebar .scroll { width: 130px; }
   body.skey.results #main { width: 812px; }
   body.skey.results .plant-list { height: auto !important; }
