--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -889,12 +889,16 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #sidebar .section { padding: 0 0 0 4px; }
   body.skey.results #sidebar .section.instructions { padding: 12px; }
   body.skey.results #sidebar .section.instructions h5 { font-size: 12px; }
+  body.skey.results #sidebar .section p.get-more { margin-bottom: 36px; }
   body.skey.results #sidebar .section p.get-more span { display: none; margin: 0; }
   body.skey.results #sidebar .section a.clear-all-btn, body.skey.results #sidebar .section a.get-help-btn { margin: 0; }
   body.skey.results #sidebar .scroll { width: 130px; }
   body.skey.results #main { width: 812px; }
   body.skey.results .plant-list { height: auto !important; }
-  body.skey.results .plant-list .plant { position: static; }
+  body.skey.results .plant-list .plant { height: 190px; position: static; }
+  body.skey.results .plant-list .plant.genus_join_left, body.skey.results .plant-list .plant.genus_join_right { border-right: 1px solid #c3d941; }
+  body.skey.results .plant-list .plant.genus_join_right { padding-right: 6px; }
+  body.skey.results .plant-list .plant .frame { display: none; }
   body.skey.results h3.species-count-heading { font-size: 18px; white-space: nowrap; }
   body.skey.results h3.species-count-heading > span { left: auto; top: 55px; }
   body.skey.results #results-display { margin-top: 83px; }
