--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -986,6 +986,7 @@ ul.get-more-questions-menu {
         &.results {
             #intro-overlay {
                 left: 16% !important;
+                top: 150px !important;
             }
             #results-display label {
                 display: none;
