Refactor length-value editor to use common save #361
Now all three character-value editor pages use the same save() routine
and format their data the same way.

--- a/gobotany/editor/templates/gobotany/edit_pile_length.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_length.html
@@ -33,7 +33,7 @@
 <p>
   <span class="all-species-button">All Species</span>
   <span class="simple-key-button">Simple Key Only</span>
-  <span class="length-save-button">SAVE CHANGES</span>
+  <span class="save-button">SAVE CHANGES</span>
 </p>
 
 <div class="pile-character-grid">
