--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -35,7 +35,7 @@ span.all-species-button, span.simple-key-button, .save-button, .length-save-butt
 .taxon-character-grid i { font-weight: bold; font-style: normal; }
 .taxon-character-grid .charactername { margin-top: 1em; border-top: 1px solid #dc9402; padding: 4px; background-color: #ebebab; }
 .taxon-character-grid .charactername:hover { background-color: #ebebab; }
-.taxon-character-grid input { float: left; margin: 4px 8px 4px 2px; }
+.taxon-character-grid input { margin: 4px 8px 4px 2px; }
 .taxon-character-grid label { cursor: pointer; display: block; padding: 4px 2px; white-space: normal; }
 .taxon-character-grid :checked, .taxon-character-grid :checked + label { background-color: #519136; color: white; }
 
