Hide the Remaining Non Monocots pile on the Advanced map page.
Show just the two 'split' piles instead. Also fix the small-screen
styles a bit. (#254)

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -28,8 +28,8 @@
 
                 {% for pile, pile_images, pile_url in piles %}
                     {% if pilegroup.slug == 'non-monocots' and piles|length == 4 and pile.slug == 'remaining-non-monocots' %}
-                        {# Exclude the big Remaining Non-Monocots pile if   #}
-                        {# it has been split in two new piles after import. #}
+                        {# Exclude the big Remaining Non-Monocots pile if #}
+                        {# it has been split in two new piles at import.  #}
                     {% else %}
                     <div class="list-item{% if forloop.last %} last{% endif %}">
                         <div class="img-gallery">
