--- a/gobotany/site/templates/gobotany/advanced_map.html
+++ b/gobotany/site/templates/gobotany/advanced_map.html
@@ -46,32 +46,37 @@
         {% for group, subgroups in pilegroups %}
             <div class="subgroups hidden">
                 {% for subgroup in subgroups %}
-                    <div class="plant-subgroup{% if forloop.last %} last{% endif %}">
-                        <h3>{{ subgroup.friendly_title|lower|capfirst }}</h3>
-                        <div class="image">
-                            <div class="frame"></div>
-                            <div class="img-container">
-                                {% for i in subgroup.sample_species_images.all %}
-                                    {% if forloop.first %}
-                                        <img src="{{ i.thumb_small }}"
-                                            alt="{{ i.alt }}">
-                                    {% endif %}
-                                {% endfor %}
+                    {% if group.slug == 'non-monocots' and subgroups|length == 4 and subgroup.slug == 'remaining-non-monocots' %}
+                        {# Exclude the big Remaining Non-Monocots pile if #}
+                        {# it has been split in two new piles at import.  #}
+                    {% else %}
+                        <div class="plant-subgroup{% if forloop.last %} last{% endif %}">
+                            <h3>{{ subgroup.friendly_title|lower|capfirst }}</h3>
+                            <div class="image">
+                                <div class="frame"></div>
+                                <div class="img-container">
+                                    {% for i in subgroup.sample_species_images.all %}
+                                        {% if forloop.first %}
+                                            <img src="{{ i.thumb_small }}"
+                                                alt="{{ i.alt }}">
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
                             </div>
+                            <a class="choose-btn"
+                                href="/{{ group.slug }}/{{ subgroup.slug }}/"></a>
+                            <p class="list">
+                                <a href="/list/#subgroup={{ subgroup.friendly_title }}"
+                                    >Species list</a>
+                            </p>
+                            {% if subgroup.video.youtube_id %}
+                            <p class="video">
+                                <a class="video"
+                                    href="http://www.youtube.com/embed/{{ subgroup.video.youtube_id }}?autoplay=1&amp;rel=0&amp;hd=1&amp;modestbranding=1">Video</a>
+                            </p>
+                            {% endif %}
                         </div>
-                        <a class="choose-btn"
-                            href="/{{ group.slug }}/{{ subgroup.slug }}/"></a>
-                        <p class="list">
-                            <a href="/list/#subgroup={{ subgroup.friendly_title }}"
-                                >Species list</a>
-                        </p>
-                        {% if subgroup.video.youtube_id %}
-                        <p class="video">
-                            <a class="video"
-                                href="http://www.youtube.com/embed/{{ subgroup.video.youtube_id }}?autoplay=1&amp;rel=0&amp;hd=1&amp;modestbranding=1">Video</a>
-                        </p>
-                        {% endif %}
-                    </div>
+                    {% endif %}
                 {% endfor %}
             </div>
         {% endfor %}
