Change the text regarding the PlantShare release.

--- a/gobotany/site/templates/gobotany/plantshare_placeholder.html
+++ b/gobotany/site/templates/gobotany/plantshare_placeholder.html
@@ -10,7 +10,7 @@
                     to share your plant discoveries, form affinity groups, 
                     and create customized checklists of plants you have 
                     found.</p>
-                    <p>PlantShare will go live in early 2013. Check back 
+                    <p>PlantShare will go live in 2013. Check back 
                     soon!</p>
 {% endblock %}
 
