--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -82,8 +82,18 @@
                 href="{% url ps-sightings-locator %}">View full page »</a></p>
         </form>
 
-        {% sightings_map latitude=map.latitude longitude=map.longitude center_title=map.center_title height="297px" width="481px" zoom="6" id="mini-sightings-map" %}
+        {% sightings_map latitude=map.latitude longitude=map.longitude center_title=map.center_title height="297px" width="481px" zoom="6" id="mini-sightings-map" %}       
     </div>
+</div>
+
+<div id="ask">
+    <h2>Ask the Botanist</h2>
+
+    <h3>&#8220;Ace&#8221; Acer</h3>
+    <p>Our Ace Botanist is here to help you identify a plant, suggest
+    locations for seeing plants, and provide you with expert scientific
+    guidance on all things in the New England plant kingdom. Registered users
+    can ask questions, all visitors can see the answers.</p>
 </div>
 
 {% endblock %}
