Add a navigation link and blank page for Ask the Botanist. (#351)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -11,6 +11,9 @@
     <div class="section sightings">
         <h4>{% nav_item 'Recent Sightings' ps-sightings %}</h4>
     </div>
+    <div class="section ask">
+        <h4>{% nav_item 'Ask the Botanist' ps-ask %}</h4>
+    </div>
     <div class="section profile">
         <h4>{% nav_item 'My Profile' ps-profile %}</h4>
     </div>
