--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -32,16 +32,20 @@
         {% endcomment %}
         {% include "_signup_nav_item.html" %}
     {% endif %}
+</div>
 
-    {% if user.is_staff %}
+{% if user.is_staff %}
+<div class="box">
     <div class="section">
         <h3>Staff Only</h3>
     </div>
     <div class="section screen-images">
         <h4>{% nav_item 'Screen Image Uploads' ps-screen-images %}</h4>
+
+        <h4>{% nav_item 'Answer Questions' ps-answer-questions %}</h4>
     </div>
-    {% endif %}
 </div>
+{% endif %}
 
 {% if not user.is_authenticated and not prior_signup_detected %}
     {% include "_login_box.html" %}
