--- a/gobotany/plantshare/templates/staff/answer_questions.html
+++ b/gobotany/plantshare/templates/staff/answer_questions.html
@@ -10,6 +10,27 @@
 
 <p>Review and answer questions from the Ask the Botanist section here.</p>
 
+<table>
+    <thead>
+        <tr>
+            <th>Question</th>
+            <th>Asked</th>
+            <th>By User</th>
+            <th>Answer</th>
+            <th>Category</th>
+        </tr>
+    </thead>
+    {% for question in questions %}
+        <tr>
+            <td>{{ question.question }}</td>
+            <td>{{ question.asked }}</td>
+            <td>{{ question.asked_by }}</td>
+            <td>{{ question.answer }}</td>
+            <td>{{ question.category }}</td>
+        </tr>
+    {% endfor %}
+</table>
+
 {% endblock %}
 
 {% block sidebar_content %}
